2009-04-22  Xavier Maillard  <xma@gnu.org>

	* src/clfswm-query.lisp (query-string): Use a generic mode.

2009-04-19  Xavier Maillard  <xma@gnu.org>

	* src/clfswm-info.lisp (info-mode): Use generic-mode for info-mode.

2009-04-18  Xavier Maillard  <xma@gnu.org>

	* src/clfswm-generic-mode.lisp (generic-mode): Add a generic mode
	to define all other modes.

2009-04-05  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/package.lisp (): Use *default-font-string* for all
	font-string.

	* src/clfswm-info.lisp (info-mode): Ensure integer windows size.

2009-02-17  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (null-size-window-p): Better check of null
	sized windows.

2009-02-14  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (handle-map-request): Add a fix to manage
	correctly fullscreen windows (SDL particularly).

2008-12-20  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (get-color): Allocate colors only once -> fix
	a segfault with clisp/new-clx.

	* src/clfswm.lisp (handle-motion-notify): Add a	needed window
	argument.

	* src/clfswm-second-mode.lisp (sm-handle-motion-notify): Add a
	needed window argument.

2008-10-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (wait-no-key-or-button-press)
	(wait-a-key-or-button-press): Check buttons press/release correctly"

2008-10-28  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/menu-def.lisp: Add children navigation menu in the movement
	menu (select next/previous child/brother/level).

2008-10-26  Philippe Brochard  <pbrochard@common-lisp.net>

	*  *: Rename 'sister' frame to 'brother' frame.

	* src/clfswm-keys.lisp (unalias-modifiers): Convert a modifier
	alias in a real modifier.

	* src/package.lisp (*modifier-alias*): New list of modifier alias
	For example: :alt is :mod-1, :numlock is :mod-2...

	* src/tools.lisp (remove-hook): New function.

	* src/clfswm-keys.lisp (with-capslock, without-capslock)