@@ -1,3 +1,8 @@
+2009-04-22  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-util.lisp (run-program-from-query-string): Launch
+	command only with a return validation.
+
 2009-04-22  Xavier Maillard  <xma@gnu.org>
 
 	* src/clfswm-query.lisp (query-string): Use a generic mode.
